Capitulo 5 portafolio Vue personal Mieducacion

--- a/Leandro-Gonzalez/Portafolio-Vue/Portafolio-Vuejs/src/assets/base.css
+++ b/Leandro-Gonzalez/Portafolio-Vue/Portafolio-Vuejs/src/assets/base.css
@@ -88,3 +88,20 @@ body {
 li {
   list-style: none;
 }
+
+section {
+  padding: 2rem;
+  border-bottom: 1px solid #ccc;
+  margin: 3remo 0rem 2 rem 0rem;
+}
+
+section h2 {
+  font-size: 2rem;
+  color: aliceblue;
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+
+section h3 {
+  color: rgb(209, 183, 148);
+}
